# SaneScanner-PapplRetrofit

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  main.c
.deps/: main.Po
include/: base.h  http_handlers.h  scan_operations.h  utils.h
src/: http_handlers.c  scan_operations.c  utils.c
src/.deps/: http_handlers.Po  scan_operations.Po  utils.Po
